welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: not found: value a
  return (a/nums.length)
          ^